--- a/css/main.css
+++ b/css/main.css
@@ -30,16 +30,16 @@ body{
     
 }
 
-.originalslot{
-    /*width:150px;
+/*.originalslot{
+    width:150px;
     height:200px;
     background-color:lightblue;
     margin:14px;
     display:inline-block;
     cursor:pointer;
     background-image:url("add.png");
-    background-size:cover;*/
-}
+    background-size:cover;
+}*/
 
 #addButton{
     background-image:url("add.png");
