--- a/css/moviesearch.css
+++ b/css/moviesearch.css
@@ -1,6 +1,8 @@
 .search-container{
     display:flex;
     align-items:center;
+    justify-content:center;
+    border:2px solid black;
 }
 
 input[type="text"]{
@@ -20,4 +22,23 @@ button[type="submit"]{
 
 #imageContainer{
     border:1px gray;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center;
+    gap:10px;
+
+}
+
+.movies li{
+    border:2px solid blue;
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    list-style:none;
+    margin:10px;
+    text-align:center;
+    background:#272727;
+    border-radius:12px;
 }
