Changed api and Search bar can take in words

--- a/css/moviesearch.css
+++ b/css/moviesearch.css
@@ -30,6 +30,10 @@ button[type="submit"]{
 
 }
 
+.movie-item{
+    border:2px solid black;
+}
+
 .movies li{
     border:2px solid blue;
     flex:1;
