--- a/css/moviesearch.css
+++ b/css/moviesearch.css
@@ -34,7 +34,20 @@ button[type="submit"]{
     border:2px solid black;
 }
 
-.movies li{
+.movies{
+    border:2px solid blue;
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    list-style:none;
+    margin:10px;
+    text-align:center;
+    background:#272727;
+    border-radius:12px;
+}
+
+.movie-thumbnail img{
     border:2px solid blue;
     flex:1;
     display:flex;
