--- a/css/moviesearch.css
+++ b/css/moviesearch.css
@@ -34,7 +34,72 @@ button[type="submit"]{
     border:2px solid black;
 }
 
-.movies{
+.close{
+    color: #aaa;
+    float:right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus{
+    color:black;
+    text-decoration:none;
+    cursor:pointer;
+}
+
+#movielistbox{
+    background-color: #fefefe;
+    margin: 15% auto;
+    
+    padding:20px;
+    border:1px solid #888;
+    width:60%;
+}
+
+
+
+#movie-container{
+    border:1px gray;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center;
+    gap:10px;
+
+    
+
+}
+
+.movie{
+    display:none;
+    position:fixed;
+    z-index:1;
+    left:0;
+    top:0;
+    width:100%;
+    height: 100%;
+    overflow:auto;
+    background-color: rgba(0,0,0,0.5);
+
+}
+
+
+/*.movies{
+    border:2px solid blue;
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    list-style:none;
+    margin:10px;
+    text-align:center;
+    background:#272727;
+    border-radius:12px;
+}
+*/
+.movie-thumbnail img{
     border:2px solid blue;
     flex:1;
     display:flex;
@@ -47,15 +112,26 @@ button[type="submit"]{
     border-radius:12px;
 }
 
-.movie-thumbnail img{
+.unknown_img{
     border:2px solid blue;
     flex:1;
     display:flex;
     flex-direction:column;
     align-items:center;
     list-style:none;
-    margin:10px;
+    /*margin:10px;*/
     text-align:center;
     background:#272727;
     border-radius:12px;
+    width:50px;
+
+}
+
+
+#movie-thumbnail-container{
+    background-color:white;
+}
+
+.hide-search-list{
+    display:none;
 }
