--- a/css/moviesearch.css
+++ b/css/moviesearch.css
@@ -34,6 +34,11 @@ button[type="submit"]{
     border:2px solid black;
 }
 
+.movie-item-info{
+    
+    width:240px;
+}
+
 .close{
     color: #aaa;
     float:right;
@@ -112,8 +117,8 @@ button[type="submit"]{
     border-radius:12px;
 }
 
-.unknown_img{
-    border:2px solid blue;
+.unknown-img{
+    border:2px solid green;
     flex:1;
     display:flex;
     flex-direction:column;
@@ -123,7 +128,7 @@ button[type="submit"]{
     text-align:center;
     background:#272727;
     border-radius:12px;
-    width:50px;
+    width:20px;
 
 }
 
