Created review modal when you click on a movie img

--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,14 @@ body{
 }*/
 
 #addButton{
-    background-image:url("add.png");
+    
     width:150px;
     height:200px;
     margin:14px;
+}
+
+#addButton:hover{
+    color:blueviolet;
 }
 
 .movieslot{
