--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body{
     width:150px;
     height:200px;
     margin:14px;
+    border-radius:10%;
 }
 
 #addButton:hover{
@@ -55,6 +56,7 @@ body{
 .movieslot{
     width:150px;
     height:200px;
+    border-radius:10%;
     background-color:lightblue;
     margin:14px;
     display:inline-block;
