Made movie thumbnail open up in review modal

--- a/css/moviesearch.css
+++ b/css/moviesearch.css
@@ -99,6 +99,12 @@ button[type="submit"]{
     border-radius:12px;
 }
 
+.thumbnail-container{
+    width:100px;
+    height:100px;
+    border:2px solid red;
+}
+
 .movie-thumbnail:hover{
     color:#888;
 }
