--- a/css/review.css
+++ b/css/review.css
@@ -17,6 +17,20 @@
 
 }
 
+.reviewimage{
+    border:2px solid blue;
+    /*flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    list-style:none;*/
+    width:fit-content;
+    margin:10px;
+    text-align:center;
+    background:#272727;
+    border-radius:12px;
+}
+
 
 .testbox{
     display:none;
